# directree

./: .gitignore  Cargo.toml  PRD.md  README.md  RELEASE.md
.github/workflows/: release.yml
npm/directree/: install.js  package.json
src/: cli.rs  clipboard.rs  config.rs  detector.rs  git.rs  ignorer.rs  importance.rs  init.rs  main.rs  render.rs  tree.rs  walker.rs  watch.rs
