[package]
name = "directree"
version = "0.1.0"
edition = "2026"
description = "AI-optimized project tree — fast, filtered, context-ready"

[[bin]]
name = "directree"
path = "src/main.rs"

[dependencies]
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"

[profile.release]
opt-level = 3
lto = true
strip = true
